# internal/handler/prompt/like_prompt_handler.go
@@ -10,16 +10,16 @@ import (
 	"github.com/zeromicro/go-zero/rest/httpx"
 )
 
-func DeletePromptHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+func LikePromptHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		var req types.DeletePromptRequest
+		var req types.LikePromptRequest
 		if err := httpx.Parse(r, &req); err != nil {
 			httpy.ResultCtx(r, w, nil, err)
 			return
 		}
 
-		l := prompt.NewDeletePromptLogic(r.Context(), svcCtx)
-		err := l.DeletePrompt(&req)
-		httpy.ResultCtx(r, w, nil, err)
+		l := prompt.NewLikePromptLogic(r.Context(), svcCtx)
+		resp, err := l.LikePrompt(&req)
+		httpy.ResultCtx(r, w, resp, err)
 	}
 }
