# internal/handler/prompt/save_prompt_handler.go
@@ -10,16 +10,16 @@ import (
 	"github.com/zeromicro/go-zero/rest/httpx"
 )
 
-func DeletePromptHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+func SavePromptHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		var req types.DeletePromptRequest
+		var req types.SavePromptRequest
 		if err := httpx.Parse(r, &req); err != nil {
 			httpy.ResultCtx(r, w, nil, err)
 			return
 		}
 
-		l := prompt.NewDeletePromptLogic(r.Context(), svcCtx)
-		err := l.DeletePrompt(&req)
-		httpy.ResultCtx(r, w, nil, err)
+		l := prompt.NewSavePromptLogic(r.Context(), svcCtx)
+		resp, err := l.SavePrompt(&req)
+		httpy.ResultCtx(r, w, resp, err)
 	}
 }
